# fitted

./: .env.example  .gitignore  AWS_CONSOLE_GUIDE.md  AWS_DEPLOYMENT_GUIDE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FIX.md  DEPLOYMENT_SUCCESS.md  FINAL_SUCCESS.md  Makefile  PLAN_RECOMMENDATION.md  README.md  TESTING_GUIDE.md  aws_learning_architecture.md  build_vs_migrate_strategy.md  deploy-no-docker.sh  deploy-simple.sh  deploy.sh  event.json  github-actions-iam-policy.json  lambda_requirements.txt  main.py  plan.md  pyproject.toml  requirements-ec2.txt  requirements-lambda.txt  requirements.txt  run_tests.sh  setup-github-actions-iam.sh  template.yaml  test-event.json
.github/workflows/: deploy.yml
.ssh/: fitted-key.pem
airflow/dags/: dbt_transformation_dag.py  weather_data_ingestion_dag.py
app/: main.py
app/core/: auth.py  config.py
app/models/: catalog_item.py  item.py  outfit.py  product.py  user.py  wardrobe.py  weather.py
app/services/: affiliate_service.py  analysis_service.py  candidate_source.py  db_service.py  dev_catalog_service.py  domain.py  domain_factory.py  embedding_service.py  llm_service.py  poshmark_service.py  preference_reranker.py  recommendation_service.py  storage_service.py  user_service.py  vector_cache.py  wardrobe_service.py  weather_service.py
app/services/domains/: fashion.py
dbt/fitted_dbt/: .user.yml  dbt_project.yml  profiles.yml
docs/: ATHENA_SETUP.md  commands.md  git_workflow_guide.md  two_tower_rec_system.md
frontend/: .gitignore  .sesskey  Makefile  app.py  pyrightconfig.json  requirements.txt
frontend/frontend/: frontend.py
infra/: Caddyfile  cloudformation.yaml
infra/systemd/: fitted-backend.service  fitted-frontend.service
notebooks/: recommender_playground.ipynb
plans/: ENTERPRISE_AI_IMPLEMENTATION_GUIDE.md  PHASE2_COMPLETION.md  WEEK3_IMPLEMENTATION_GUIDE.md  WEEK4_AIRFLOW_GUIDE.md  cicd_comparison_guide.md  frontend_design.md  lambda_deployment_best_practices.md  lambda_testing_best_practices.md  s3-query-alternatives-analysis.md  s3-query-alternatives-updated.md  week2_guide.md  week2_guide_2.md
scripts/: analyze_weather.py  backfill_catalog_embeddings.py  backfill_wardrobe_embeddings.py  db_migrate.py  deploy.sh  embedding_server.py  ingest_poshmark_dev_catalog.py  pretrain_item_tower.py  reset_athena_table.py  run_local.sh  setup_athena.py  setup_ec2.sh  ssh_tunnel.sh  train_two_towers.py
tests/: conftest.py  test_affiliate_service.py  test_analysis_service.py  test_api_endpoints.py  test_auth.py  test_config.py  test_db_service.py  test_dev_catalog_service.py  test_domain.py  test_embedding_service.py  test_frontend.py  test_llm_service.py  test_models.py  test_poshmark_service.py  test_preference_reranker.py  test_pretrain_item_tower.py  test_recommendation_service.py  test_storage_service.py  test_train_two_towers.py  test_user_service.py  test_vector_cache.py  test_wardrobe_service.py  test_weather_service.py
